benefits/static/css/styles.css
/* ... */
@media (min-width: 992px) {
  /* Utility Class: Padding bottom 64px on Desktop */
  /* Pair with pb-4 on Form pages to get 24px on Mobile, 64px on Desktop */
  .pb-lg-8 {
    padding-bottom: 64px !important;
  }

  .pt-lg-8 {
    padding-top: 64px !important;
  }
}

.pt-8 {
  padding-top: 64px;
}

.fs-base {
  font-size: var(--bs-body-font-size);
}

.ls-base {
  letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
}

/* Links */
/* Same sizes for all screen widths: 18px */
a:not(.btn) {
  color: var(--primary-color);
  text-decoration: underline;
  text-decoration-style: solid;
  font-weight: var(--bold-font-weight);
}

a:hover:not(.btn) {
  color: var(--hover-color);
  text-decoration: underline;
}

a:visited:not(.btn) {
  color: var(--selected-color);
}

a[target="_blank"]::after {
  content: " ";
  background-color: currentColor;

  mask-image: url("/static/img/external-link.svg"),
    linear-gradient(transparent, transparent);
  mask-position: center center;
  -webkit-mask-image: url("/static/img/external-link.svg"),
    linear-gradient(transparent, transparent);
  -webkit-mask-position: center center;

  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
  margin-left: 2px;
  vertical-align: text-bottom;
}

/* Headlines */
/* All headlines */
h1,
.h1,
h2,
.h2,
h3,
.h3,
h4 {
  font-weight: var(--bold-font-weight);
  margin: 0;
}

/* H1 */
/* Mobile first: Screen width up to 992px - 24px (24rem/16 = 1.5rem) and left */
/* Screen width above 992px - 35px (35rem/16 = 2.1875rem) and centered */
:root {
  --h1-font-size: var(--font-size-24px);
  --h1-letter-spacing-percent: var(--letter-spacing-3);
}

@media (min-width: 992px) {
  :root {
    --h1-font-size: var(--font-size-35px);
    --h1-text-align: center;
    --h1-letter-spacing-percent: var(--letter-spacing-5);
    --font-size-35px: 2.1875rem;
  }
}

h1,
.h1 {
  font-size: var(--h1-font-size);
  text-align: var(--h1-text-align);
  padding-top: calc(70rem / 16);
  line-height: var(--heading-line-height);
  letter-spacing: calc(var(--h1-font-size) * var(--h1-letter-spacing-percent));
}

/* H2 */
/* Same sizes for all screen widths: 24px (24rem/16 = 1.5rem) */
/* Also has a class which can be applied to non-headline elements */
:root {
  --h2-letter-spacing-percent: var(--letter-spacing-5);
}

@media (min-width: 992px) {
  :root {
    --h2-letter-spacing-percent: var(--letter-spacing-3);
  }
}

h2,
.h2 {
  font-size: var(--font-size-24px);
  line-height: var(--heading-line-height);
  letter-spacing: calc(
    var(--font-size-24px) * var(--h2-letter-spacing-percent)
  );
}

@media (max-width: 992px) {
  /* H2 mobile sizing */
  /* Only used on Landing Pages */
  .h2-sm-p {
    font-size: var(--bs-body-font-size);
    font-weight: var(--bs-body-font-weight);
    letter-spacing: calc(
      var(--bs-body-font-size) * var(--h2-letter-spacing-percent)
    );
    line-height: var(--heading-line-height);
    margin: 0;
  }
}

@media (max-width: 992px) {
  /* H2: 20px, up to Small width */
  .h2-sm {
    font-size: var(--font-size-20px);
    line-height: var(--heading-line-height);
  }
}

/* H3 */
/* Same sizes for all screen widths: 20px (20rem/16 = 1.25rem) */
/* Also has a class which can be applied to non-headline elements */
h3,
.h3 {
  font-size: var(--h3-font-size);
  line-height: var(--heading-line-height);
  letter-spacing: calc(var(--h3-font-size) * var(--letter-spacing-5));
}

/* H4 */
/* Used for Agency Selector card, agency name */
:root {
  --h4-font-size: var(--font-size-18px);
  --h4-letter-spacing-percent: var(--letter-spacing-3);
}

@media (min-width: 992px) {
  :root {
    --h4-font-size: var(--font-size-20px);
    --h4-letter-spacing-percent: var(--letter-spacing-5);
  }
}

h4 {
  font-size: var(--h4-font-size);
  letter-spacing: calc(var(--h4-font-size) * var(--h4-letter-spacing-percent));
  line-height: var(--h4-line-height);
}

/* Main */
/* The minimum height is calculated by 100 viewport height minus Header and Footer height */
main {
  min-height: var(--main-content-min-height);
}

/* Footer */
/* Footer has same font styles on all screen widths */
/* Mobile first: One link per row, each link is 50px height */
/* Screen width above 992px - Footer is 50px height */
/* Total footer height is 50px on Desktop */
/* And 102 on Mobile */
/* Footer breakpoint set to 992px */
/* Note: Not all Footer styles are written in mobile-first */
/* to style the full-width line on mobile */
/* and the desktop container-width sizing */

:root {
  --footer-background-color: var(--dark-color);
  --footer-link-color: #73b3e7;
  --footer-link-width: 100%;
  --footer-link-hover-color: #0062ff;
  --footer-link-visited-color: #9b74d7;
  --footer-link-font-weight: var(--bold-font-weight);
  --footer-mobile-underline-color: var(--bs-white);
  --main-content-min-height: calc(100vh - 246px);
  /* 246px = Header Height (80px) + (Footer Link (50px) * Number of Links (2)) + Underline Height (2px) + Footer Margin Top (64px) */
}

@media (min-width: 992px) {
  :root {
    --footer-link-width: auto;
    --main-content-min-height: calc(100vh - 194px);
    /* 194px = Header Height (80px) + Footer Height (50px) + Footer Margin Top (64px) */
  }
}

footer {
  background: var(--footer-background-color);
  margin-top: 64px;
}

footer .footer-links li {
  width: var(--footer-link-width);
}

footer .footer-links li a {
  color: var(--footer-link-color);
  font-weight: var(--footer-link-font-weight);
  font-size: var(--bs-body-font-size);
  text-decoration: underline;
  letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
  line-height: 50px;
}

footer .footer-links li a:hover {
  color: var(--footer-link-hover-color);
}

footer .footer-links li a:active,
footer .footer-links li a:visited {
  color: var(--footer-link-visited-color);
}
/* ... */

